--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "versta-project-template",
+  "name": "Space pool",
   "version": "0.3.0",
   "description": "Versta project template for a quick start",
-  "author": "Alexey Bogoslovskiy <bogoslovskiya@gmail.com>",
+  "author": "Vyacheslav Utrobin <utrobinslavik@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production gulp build",
