--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Space pool",
+  "name": "SpacePool",
   "version": "0.3.0",
   "description": "Versta project template for a quick start",
   "author": "Vyacheslav Utrobin <utrobinslavik@gmail.com>",
