--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "normalize.css": "^6.0.0",
     "nouislider": "^10.1.0",
     "object-fit-images": "^3.2.3",
+    "overlayscrollbars": "^1.6.1",
     "postcss-discard-comments": "^2.0.4",
     "postcss-import": "^11.1.0",
     "postcss-reporter": "^3.0.0",
