--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cssnano": "^3.10.0",
     "debuga": "^1.0.2",
     "del": "^2.2.2",
+    "es6-object-assign": "^1.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-loader": "^1.7.1",
@@ -82,5 +83,8 @@
     "webpack": "^2.3.2",
     "webpack-stats-logger": "^1.0.1",
     "webpack-stream": "^3.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-object-assign": "^6.22.0"
   }
 }
