--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.6",
     "air-datepicker": "^2.2.3",
-    "autoprefixer": "^9.4.3",
+    "autoprefixer": "^9.4.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -48,10 +48,10 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-plumber-error-handler": "^1.0.0",
-    "gulp-postcss": "^6.4.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sass-bulk-import": "^1.0.1",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylelint": "^3.9.0",
@@ -61,15 +61,16 @@
     "jade-get-data": "^1.0.1",
     "jquery": "^3.2.1",
     "jquery.scrollbar": "^0.2.11",
-    "leaflet": "^1.3.4",
+    "leaflet": "^1.4.0",
     "normalize.css": "^8.0.1",
     "nouislider": "^10.1.0",
     "object-fit-images": "^3.2.4",
+    "os-scroll-chain": "^1.0.0",
     "overlayscrollbars": "^1.6.1",
-    "postcss-discard-comments": "^2.0.4",
-    "postcss-import": "^11.1.0",
-    "postcss-reporter": "^3.0.0",
-    "postcss-scss": "^0.4.1",
+    "postcss-discard-comments": "^4.0.1",
+    "postcss-import": "^12.0.1",
+    "postcss-reporter": "^6.0.1",
+    "postcss-scss": "^2.0.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "scrollreveal": "^3.3.6",
