--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-svg-symbols": "^2.0.2",
     "gulp-watch": "^4.3.11",
     "inputmask": "^3.3.8",
+    "is-touch-device": "^1.0.1",
     "jade-get-data": "^1.0.1",
     "jquery": "^3.2.1",
     "jquery.scrollbar": "^0.2.11",
