--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.6",
     "air-datepicker": "^2.2.3",
+    "animejs": "^3.0.0",
     "autoprefixer": "^9.4.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
