--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "air-datepicker": "^2.2.3",
     "animejs": "^3.0.0",
     "autoprefixer": "^9.4.4",
+    "autosize": "^4.0.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -62,6 +63,7 @@
     "is-touch-device": "^1.0.1",
     "jade-get-data": "^1.0.1",
     "jquery": "^3.2.1",
+    "jquery-mask-plugin": "^1.14.15",
     "jquery.scrollbar": "^0.2.11",
     "leaflet": "^1.4.0",
     "normalize.css": "^8.0.1",
