--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "object-fit-images": "^3.2.4",
     "os-scroll-chain": "^1.0.0",
     "overlayscrollbars": "^1.6.1",
+    "parsleyjs": "^2.8.1",
     "postcss-discard-comments": "^4.0.1",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
