--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "os-scroll-chain": "^1.0.0",
     "overlayscrollbars": "^1.6.1",
     "parsleyjs": "^2.8.1",
+    "picturefill": "^3.0.3",
     "postcss-discard-comments": "^4.0.1",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
