--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "swiper": "^4.5.0",
     "tooltipster": "^4.2.5",
     "vinyl-named": "^1.1.0",
+    "webkit-line-clamp": "^1.2.0",
     "webpack": "^2.3.2",
     "webpack-stats-logger": "^1.0.1",
     "webpack-stream": "^3.2.0"
