--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fancyapps/fancybox": "^3.5.7",
     "air-datepicker": "^2.2.3",
     "animejs": "^3.1.0",
+    "array-from-polyfill": "^1.0.1",
     "autoprefixer": "^9.6.1",
     "autosize": "^4.0.2",
     "babel-core": "^6.26.3",
@@ -24,11 +25,12 @@
     "bemto.pug": "^2.1.0",
     "bluebird": "^3.5.5",
     "browser-sync": "^2.26.7",
-    "choices.js": "^4.1.4",
+    "choices.js": "^7.0.0",
     "commander": "^2.20.0",
     "cross-env": "^4.0.0",
     "css-mqpacker": "^5.0.1",
     "cssnano": "^3.10.0",
+    "custom-event-polyfill": "^1.0.7",
     "debuga": "^1.0.2",
     "del": "^2.2.2",
     "es6-object-assign": "^1.1.0",
@@ -63,16 +65,17 @@
     "is-touch-device": "^1.0.1",
     "jade-get-data": "^1.0.1",
     "jquery": "^3.4.1",
-    "jquery-mask-plugin": "^1.14.15",
+    "jquery-mask-plugin": "^1.14.16",
     "jquery.scrollbar": "^0.2.11",
     "leaflet": "^1.5.1",
     "normalize.css": "^8.0.1",
     "nouislider": "^10.1.0",
     "object-fit-images": "^3.2.4",
     "os-scroll-chain": "^1.0.0",
-    "overlayscrollbars": "^1.9.0",
+    "overlayscrollbars": "^1.9.1",
     "parsleyjs": "^2.9.1",
     "picturefill": "^3.0.3",
+    "polyfill-array-includes": "^2.0.0",
     "postcss-discard-comments": "^4.0.2",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
