--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "air-datepicker": "^2.2.3",
     "animejs": "^3.1.0",
     "array-from-polyfill": "^1.0.1",
+    "array.prototype.find": "^2.1.0",
     "autoprefixer": "^9.6.1",
     "autosize": "^4.0.2",
     "babel-core": "^6.26.3",
