--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "browser-sync": "^2.26.7",
     "choices.js": "^7.0.0",
     "commander": "^2.20.0",
+    "croppie": "^2.6.4",
     "cross-env": "^4.0.0",
     "css-mqpacker": "^5.0.1",
     "cssnano": "^3.10.0",
