--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "svg4everybody": "^2.1.8",
     "swiper": "^4.5.0",
     "tooltipster": "^4.2.5",
+    "uid": "0.0.2",
     "vinyl-named": "^1.1.0",
     "webkit-line-clamp": "^1.2.0",
     "webpack": "^2.3.2",
