--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animejs": "^3.1.0",
     "array-from-polyfill": "^1.0.1",
     "array.prototype.find": "^2.1.0",
+    "array.prototype.findindex": "^2.0.2",
     "autoprefixer": "^9.7.3",
     "autosize": "^4.0.2",
     "babel-core": "^6.26.3",
@@ -26,7 +27,7 @@
     "bemto.pug": "^2.1.0",
     "bluebird": "^3.7.2",
     "browser-sync": "^2.26.7",
-    "choices.js": "^7.1.5",
+    "choices.js": "^9.0.1",
     "commander": "^2.20.3",
     "cropperjs": "^1.5.6",
     "croppie": "^2.6.4",
@@ -90,7 +91,7 @@
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "svg4everybody": "^2.1.8",
-    "swiper": "^4.5.1",
+    "swiper": "^5.2.1",
     "tooltipster": "^4.2.7",
     "uid": "0.0.2",
     "vinyl-named": "^1.1.0",
