update build for last stable node version

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sass-bulk-import": "^1.0.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^3.9.0",
@@ -72,6 +72,7 @@
     "jquery-mask-plugin": "^1.14.16",
     "jquery.scrollbar": "^0.2.11",
     "leaflet": "^1.6.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "nouislider": "^10.1.0",
     "object-fit-images": "^3.2.4",
