base dates generate

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jquery-mask-plugin": "^1.14.16",
     "jquery.scrollbar": "^0.2.11",
     "leaflet": "^1.6.0",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "nouislider": "^10.1.0",
