fix issue61, 60, update sliders on touch devices

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "custom-event-polyfill": "^1.0.7",
     "debuga": "^1.0.2",
     "del": "^2.2.2",
+    "detect-it": "^3.0.6",
     "es6-object-assign": "^1.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
