--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "jquery-mask-plugin": "^1.14.16",
     "jquery.scrollbar": "^0.2.11",
     "leaflet": "^1.7.1",
-    "moment": "^2.27.0",
+    "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
-    "nouislider": "^14.6.0",
+    "nouislider": "^14.6.2",
     "object-fit-images": "^3.2.4",
     "os-scroll-chain": "^2.0.0",
     "overlayscrollbars": "^1.13.0",
@@ -90,6 +90,7 @@
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "scrollreveal": "^4.0.7",
+    "sortablejs": "^1.12.0",
     "sticky-kit": "^1.1.3",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
