add heightEqualizer for space

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "@juggle/resize-observer": "^3.2.0",
     "air-datepicker": "^2.2.3",
     "animejs": "^3.2.0",
     "array-from-polyfill": "^1.0.1",
