--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "SpacePool",
   "version": "0.3.0",
   "description": "Versta project template for a quick start",
-  "author": "Vyacheslav Utrobin <utrobinslavik@gmail.com>",
+  "author": "Alla Krainova <aukra25@yandex.ru>",
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production gulp build",
@@ -11,25 +11,21 @@
     "make": "node make"
   },
   "dependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "@fancyapps/fancybox": "^3.5.7",
     "@juggle/resize-observer": "^3.2.0",
     "air-datepicker": "^2.2.3",
     "animejs": "^3.2.1",
-    "array-from-polyfill": "^1.0.1",
-    "array.prototype.find": "^2.1.1",
-    "array.prototype.findindex": "^2.1.0",
     "autoprefixer": "^9.8.6",
     "autosize": "^4.0.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-loader": "^8.2.2",
     "bemto.pug": "^2.1.0",
     "bluebird": "^3.7.2",
     "browser-sync": "^2.26.13",
     "choices.js": "^9.0.1",
     "commander": "^2.20.3",
+    "core-js": "^3.8.0",
     "cropperjs": "^1.5.9",
     "croppie": "^2.6.5",
     "cross-env": "^4.0.0",
@@ -39,7 +35,6 @@
     "debuga": "^1.0.2",
     "del": "^2.2.2",
     "detect-it": "^3.0.7",
-    "es6-object-assign": "^1.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-loader": "^1.7.1",
@@ -85,7 +80,6 @@
     "overlayscrollbars": "^1.13.0",
     "parsleyjs": "^2.9.2",
     "picturefill": "^3.0.3",
-    "polyfill-array-includes": "^2.0.0",
     "postcss-discard-comments": "^4.0.2",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
@@ -108,7 +102,5 @@
     "webpack-stats-logger": "^1.0.1",
     "webpack-stream": "^3.2.0"
   },
-  "devDependencies": {
-    "babel-plugin-transform-object-assign": "^6.22.0"
-  }
+  "devDependencies": {}
 }
