change content for index

--- a/app/data/nd-main-search-areas.json
+++ b/app/data/nd-main-search-areas.json
@@ -3,8 +3,7 @@
     "name": "area",
     "value": "all areas",
     "title": "All areas",
-    "cls": "_wide",
-    "checked": "true"
+    "cls": "_wide"
   },
   {
     "name": "area",
