--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "make": "node make"
   },
   "dependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
     "@fancyapps/fancybox": "^3.5.7",
-    "@juggle/resize-observer": "^3.2.0",
+    "@juggle/resize-observer": "^3.3.0",
     "air-datepicker": "^2.2.3",
     "animejs": "^3.2.1",
     "autoprefixer": "^10.0.0",
@@ -25,24 +25,23 @@
     "browser-sync": "^2.26.14",
     "choices.js": "^9.0.1",
     "commander": "^2.20.3",
-    "core-js": "^3.8.3",
-    "cropperjs": "^1.5.10",
+    "core-js": "^3.9.1",
+    "cropperjs": "^1.5.11",
     "croppie": "^2.6.5",
     "cross-env": "^4.0.0",
-    "css-mqpacker": "^5.0.1",
     "cssnano": "^4.1.10",
     "custom-event-polyfill": "^1.0.7",
     "debuga": "^1.0.2",
-    "del": "^2.2.2",
+    "del": "^6.0.0",
     "detect-it": "^3.0.7",
-    "eslint": "^7.19.0",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-loader": "^4.0.0",
     "eslint-plugin-import": "^2.22.1",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.0",
-    "gulp-changed": "^2.0.0",
-    "gulp-debug": "^3.1.0",
+    "gulp-changed": "^4.0.0",
+    "gulp-debug": "^4.0.0",
     "gulp-file-include": "^2.3.0",
     "gulp-filter": "^5.0.0",
     "gulp-gh-pages": "^0.5.4",
@@ -53,23 +52,21 @@
     "gulp-plumber": "^1.2.1",
     "gulp-plumber-error-handler": "^1.0.0",
     "gulp-postcss": "^9.0.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.4.0",
+    "gulp-pug": "^4.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sass-bulk-import": "^1.0.1",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-symbols": "^2.0.2",
-    "gulp-watch": "^4.3.11",
+    "gulp-watch": "^5.0.0",
     "gulp-webp": "^4.0.1",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-webp": "^6.0.0",
     "imask": "^6.0.7",
     "is-touch-device": "^1.0.1",
     "jade-get-data": "^1.0.1",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "jquery-mask-plugin": "^1.14.16",
-    "jquery.scrollbar": "^0.2.11",
-    "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
@@ -79,7 +76,7 @@
     "overlayscrollbars": "^1.13.1",
     "parsleyjs": "^2.9.2",
     "picturefill": "^3.0.3",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.7",
     "postcss-discard-comments": "^4.0.2",
     "postcss-import": "^14.0.0",
     "postcss-reporter": "^7.0.0",
@@ -87,10 +84,10 @@
     "postcss-scss": "^3.0.0",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
-    "scrollreveal": "^4.0.7",
+    "scrollreveal": "^4.0.8",
     "sortablejs": "^1.13.0",
     "sticky-kit": "^1.1.3",
-    "stylelint": "^13.10.0",
+    "stylelint": "^13.11.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.19.0",
     "svg4everybody": "^2.1.8",
@@ -99,10 +96,8 @@
     "uid": "0.0.2",
     "vinyl-named": "^1.1.0",
     "webkit-line-clamp": "^1.2.2",
-    "webpack": "^2.3.2",
-    "webpack-split-chunks": "^0.2.1",
-    "webpack-stats-logger": "^1.0.1",
-    "webpack-stream": "^3.2.0"
+    "webpack": "^5.0.0",
+    "webpack-stats-logger": "^1.0.1"
   },
   "peerDependencies": {
     "gulp-postcss": "^9.0.0",
